<resources>
    <string name="app_name">WHB</string>
    <string name="mine_register">注册</string>
    <string name="mine_forget_password">忘记密码</string>
    <string name="mine_login">登录</string>
    <string name="mine_plz_input_password">请输入密码</string>
    <string name="mine_jump">跳过</string>
    <string name="mine_confirm_password">确认密码</string>
    <string name="mine_deal_password_again">请再次输入交易密码</string>
    <string name="mine_6_18_password">6~18位英文数字组合</string>
    <string name="mine_deal_password">资金密码</string>
    <string name="mine_plz_input_password_again">请再次输入密码</string>
    <string name="mine_login_password">登录密码</string>
    <string name="mine_plz_input_check_code">请输入验证码</string>
    <string name="mine_get_check_code">获取验证码</string>
    <string name="intro">*手机号一经注册不可修改</string>
    <string name="mine_plz_input_phone">请输入手机号</string>
    <string name="mine_input_invite_code">请输入邀请码</string>
    <string name="mine_invite_code">邀请码</string>
    <string name="phone">手机</string>
    <string name="mine_forget_password_title">忘记密码</string>
    <string name="home">首页</string>
    <string name="net_work_error">检查网络是否连接</string>
    <string name="connect_server_timeout">无法连接到服务器</string>
    <string name="parse_data_error">解析数据出现错误</string>
    <string name="connect_error">未连接到服务器</string>
    <string name="on_server_error">服务器开小差了，请连接重试</string>
    <string name="tips">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="search">搜索</string>
    <string name="chose_area_code">选择手机号归属地</string>
    <string name="mine_send_success">发送成功</string>
    <string name="pwd_not_same">两次输入密码不一致</string>
    <string name="daealpwd_not_same">两次输入资金密码不一致</string>
    <string name="login_succeed">登录成功</string>
    <string name="zichan">资产</string>
    <string name="invite_friends">邀请好友</string>
    <string name="invite_friends_record">邀请记录</string>
    <string name="setting">设置</string>
    <string name="safe_center">安全中心</string>
    <string name="version_code">版本号</string>
    <string name="zijin_pwd">资金密码</string>
    <string name="login_pwd">登录密码</string>
    <string name="tibi">提币</string>
    <string name="tibi_address">提币地址</string>
    <string name="input_tibi_address">请输入提币地址或扫码</string>
    <string name="tibi_num">提币数量</string>
    <string name="zuidatiqu">最小:100/最大:1000000</string>
    <string name="all">全部</string>
    <string name="jiaoyi_pwd">交易密码</string>
    <string name="input_deal_pwd">请输入交易密码</string>
    <string name="tibi_record">提币记录</string>
    <string name="charge">充值</string>
    <string name="copy_address">复制地址</string>
    <string name="charge_record">充值记录</string>
    <string name="touzi">投资</string>
    <string name="touzi_record">投资记录</string>
    <string name="qitou_num">起投金额</string>
    <string name="confirm_touzi">确认投资</string>
    <string name="phone_length_fail">手机号长度有误</string>
    <string name="login_pwd_not_null">登录密码不能为空</string>
    <string name="pwd_not_length">登录密码长度需在6~18位之间</string>
    <string name="deal_login_pwd_not_null">资金密码不能为空</string>
    <string name="deal_pwd_not_length">资金密码长度需在6~18位之间</string>
    <string name="find_zijin_pwd">设置资金密码</string>
    <string name="input_old_pwd">请输入原登录密码</string>
    <string name="modify_pwd">修改登录密码</string>
    <string name="gonggao">公告</string>
    <string name="gonggao_desc">通知详情</string>
    <string name="shouyi">收益</string>
    <string name="safe_check">资金密码</string>
    <string name="input_deal_password">请输入资金密码</string>
    <string name="intro_charge">1、此地址只接收USDT，发送其他币种到此地址将不可找回。\n2、充值到账需要2个网络确认，请耐心等待。\n3、200 USDT起充。</string>
    <string name="zuyong">租用</string>
    <string name="tibi_choose">提币币种</string>
    <string name="text_current_price">当前WEB交易所价格：</string>
    <string name="text_order_no">订单编号：%s</string>
    <string name="text_cur_days">已分红%s天</string>

</resources>
