<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    android:orientation="vertical">

    <include
        android:id="@+id/mToolBar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/fl_tips"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#CBF5EF"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:text="温馨提示"
            android:textColor="@color/blue" />

        <ImageView
            android:id="@+id/iv_close"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|right"
            android:paddingEnd="@dimen/margin_16"
            android:src="@mipmap/ic_close_green" />
    </FrameLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tibi_choose"
                android:textColor="@color/home_text"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/rl_choose"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/et_coin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:maxLines="1"

                    android:text="WHB"
                    android:textColor="@color/home_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@mipmap/arrow_bottom"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tibi_address"
                android:textColor="@color/home_text"
                android:textSize="12sp" />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/tv_scan"
                    android:background="@null"
                    android:hint="@string/input_tibi_address"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/home_text"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/tv_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@mipmap/saomiao" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tibi_num"
                android:textColor="@color/home_text"
                android:textSize="12sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/et_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/zuidatiqu"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/home_text"
                    android:textColorHint="@color/hintTextColor"
                    android:textSize="14sp" />

                <TextView

                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/all"
                    android:textColor="@color/blue" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_lest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="可用0USDT"
                android:textColor="@color/text_color_edit_hint" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:paddingLeft="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:text="手续费"
                    android:textColor="@color/home_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_need"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="0"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_shouxu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="手续费为提币数量的5%"
                android:textColor="@color/hintTextColor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:paddingLeft="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:text="实际到账"
                    android:textColor="@color/home_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_shiji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:text="0"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/text_current_price"
                android:textColor="@color/hintTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/jiaoyi_pwd"
                android:textColor="@color/home_text"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_white_solid_5dp_coner"
                android:hint="@string/input_deal_pwd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/home_text"
                android:textColorHint="@color/hintTextColor"
                android:textSize="14sp" />

            <Button
                android:id="@+id/tv_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_blue_solid_5dp_coner"
                android:text="@string/tibi"
                android:textColor="@color/color_white"
                app:layout_constraintTop_toBottomOf="@+id/ll_code" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>
