<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_normall"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_top"
        android:orientation="vertical"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="15dp"
                android:background="@drawable/dialog_bg_top"
                android:singleLine="true"
                android:text="@string/tips"
                android:textColor="@color/commonTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="4dp"
                android:padding="15dp"
                android:src="@mipmap/bt_close" />

            <TextView
                android:id="@+id/mTvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="23dp"
                android:gravity="center"
                android:text="签到成功，所有矿机开始运行"
                android:textColor="@color/hintTextColor"
                android:textSize="13sp" />

        </RelativeLayout>


        <View
            android:id="@+id/line_part"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/part_line_color" />

        <LinearLayout
            android:id="@+id/ll_bt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="100"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btn_cancle"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@drawable/dialog_bg"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blue" />

            <View
                android:id="@+id/view1"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/part_line_color" />

            <Button
                android:id="@+id/btn_confirm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/blue" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_award"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_box_news">
        <ImageView
            android:id="@+id/iv_close_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:padding="15dp"
            android:src="@mipmap/bt_close" />

        <LinearLayout
            android:id="@+id/ll_award"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="新人礼包"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="恭喜您注册成功"
                android:textColor="@color/blue"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="送您35枚/10天体验矿机~"
                android:textColor="@color/blue"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_lingqu"
            android:layout_below="@+id/ll_award"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_blue_solid_5dp_coner"
            android:text="领取新人礼包"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>