<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_translucent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="选择时长"
            android:textColor="@color/color_white"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/rl_choose"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_solid_5dp_coner"
            android:paddingLeft="8dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:text="请选择时长"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_bottom"
                android:visibility="visible" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="转入数量"
            android:textColor="@color/color_white"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_solid_5dp_coner"
            android:paddingLeft="8dp"
            android:paddingRight="15dp">

            <EditText
                android:id="@+id/et_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="输入投入数量，至少100WHB"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/home_text"
                android:textColorHint="@color/hintTextColor"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/all"
                android:textColor="@color/blue" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="可投入数量"
                android:textColor="@color/color_white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvHaveCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                android:textColor="@color/color_white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="WHB"
                android:textColor="@color/color_white"
                android:textSize="10sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/jiaoyi_pwd"
            android:textColor="@color/color_white"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white_solid_5dp_coner"
            android:hint="@string/input_deal_pwd"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="@color/home_text"
            android:textColorHint="@color/hintTextColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/tv_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_blue_solid_5dp_coner"
            android:text="确定"
            android:textColor="@color/color_white"
            app:layout_constraintTop_toBottomOf="@+id/ll_code" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="分红池规则："
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="1、分红池单次至少投入100WHB才可有分红；"
            android:textColor="@color/color_a5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="2、选择投入时长，投入后到期才可赎回；"
            android:textColor="@color/color_a5"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="3、投入的金额越多、时长越长，获得的分红越多"
            android:textColor="@color/color_a5"
            android:textSize="14sp" />


    </LinearLayout>


</LinearLayout>
